corrected text alignment for all image sizes

--- a/style/style.css
+++ b/style/style.css
@@ -312,6 +312,7 @@ input {
 .gallery-img {
     height: 200px;
     width: 200px;
+    object-fit: cover;
     cursor: pointer;
 }
 
@@ -409,7 +410,7 @@ input {
 
 @media only screen and (max-width: 430px) {
     .gallery-grid-container {
-        grid-template-columns: 1fr;
+        grid-template-columns: 1fr 1fr;
         margin: 0 auto;
         gap: .5em;
         padding: .5em;
@@ -421,7 +422,8 @@ input {
         align-content: center;
     }
     .gallery-img {
-        height: 300px;
-        width: 300px;
+        /* height: 150px; */
+        width: 150px;
+        object-fit: cover;
     }
 }
